Bug 135181 - UI: Zoom slider in toolbar of Calc's print preview is not transparent (gen)
Summary: UI: Zoom slider in toolbar of Calc's print preview is not transparent (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
: 135189 135984 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-27 08:56 UTC by Thomas Lendo
Modified: 2020-09-23 15:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Calc zoom slider with black background (20.80 KB, image/jpeg)
2020-07-27 08:56 UTC, Thomas Lendo
Details
the same in the new version from today (162.54 KB, image/png)
2020-09-03 13:30 UTC, BogdanB
Details
Calc zoom slider in print preview toolbar (22.71 KB, image/png)
2020-09-13 11:44 UTC, Thomas Lendo
Details
screenshot (26.50 KB, image/png)
2020-09-23 15:02 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Lendo 2020-07-27 08:56:40 UTC
Created attachment 163597 [details]
Calc zoom slider with black background

Zoom slider in toolbar of Calc's print preview is not transparent but black. See attached screenshot of the print preview toolbars.

The issue also exists when deactivating Options > LibreOffice > View > Use Skia for all rendering.

Maybe this is a follow-up bug of bug 125538 'Bad shaded background on zoom slider within Calc's print preview toolbar (standard)'?


Tested with

Version: 7.0.0.2 (x64)
Build ID: c01aa64b6c3d89ebe5fe69c28c7adb24eb85249c
CPU-Threads: 12; BS: Windows 10.0 Build 18363; UI-Render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: de-DE
Calc: threaded

and

Version: 7.1.0.0.alpha0+ (x64)
Build ID: ffe503b62f9a508285ed06ef977f91604130579a
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-07-27 10:22:50 UTC
Regression introduced by

https://cgit.freedesktop.org/libreoffice/core/commit/?id=444c7c736be7545344298a9cbb3a69886edc5ecb

author	Noel Grandin <noelgrandin@gmail.com>	2020-05-18 18:23:13 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2020-05-19 10:02:48 +0200
commit 444c7c736be7545344298a9cbb3a69886edc5ecb (patch)
tree 9c58bd0aad9e4cf284b41950664d8855d4f0435c
parent fc1d1acd518a9937c2501242dae2af4530b52fe7 (diff)
tdf#125538 fix background of zoom control

Bisected with bibisect-linux64-7.0

Adding Cc: to Noel Grandin
Comment 2 Xisco Faulí 2020-07-27 11:43:12 UTC
*** Bug 135189 has been marked as a duplicate of this bug. ***
Comment 3 Buovjaga 2020-08-28 13:34:44 UTC
*** Bug 135984 has been marked as a duplicate of this bug. ***
Comment 4 Noel Grandin 2020-09-03 13:26:17 UTC
Sorry, no idea how to fix this in that mode. 

Clearly something weird with transparency and buffering going on

(a) it's not flushing the previous contents of the paint buffer, as can be seen when clicking multiple times
(b) the background is not showing through
Comment 5 BogdanB 2020-09-03 13:30:05 UTC
Created attachment 165091 [details]
the same in the new version from today

Confirm also with this version launched today

Version: 7.0.1.2 (x64)
Build ID: 7cbcfc562f6eb6708b5ff7d7397325de9e764452
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded
Comment 6 BogdanB 2020-09-03 13:31:52 UTC
I reset to factory settings everytime I installed LO again.

If I can do something in settings to test more please tell me...
Comment 7 BogdanB 2020-09-03 13:36:02 UTC
Disable Skia: no difference
Ignore Skia blocklist -> unchecked -> no difference

As a mention this expression should be changed from "Skia blacklist" to "Skia Denylist"

See release notes for 7.1:
-renamed config item OpenCLWhiteList to OpenCLAllowList core commit abb6c015 (Thorsten Behrens, CIB)
-renamed config item DeviceBlacklist to DeviceDenylist core commit 493ae7a6 (Thorsten Behrens, CIB)
-renamed config item BlacklistCurrentDevice to DenylistCurrentDevice core commit 493ae7a6 (Thorsten Behrens, CIB)
-renamed config item OpenCLBlackList to OpenCLDenyList core commit 493ae7a6 (Thorsten Behrens, CIB)
Comment 8 Noel Grandin 2020-09-03 18:11:41 UTC
The problem here is not skia/etc related. The problem here is that the "welded" gtk3 backend paints differently to the non-welded stuff.

The welded gtk3 backend prepares an empty buffer to paint into, while the non-welded thing seems to preserve the previous paint contents somehow.
Comment 9 Commit Notification 2020-09-07 13:05:11 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/00cffc20e40b2412c7e9867eed24c9834504e24f

tdf#135181 Calc print preview zoom slider print preview not transparent (gen)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 BogdanB 2020-09-12 17:45:34 UTC
Thomas Lendo, can you test this if everything is ok now in Master?...
Comment 11 Thomas Lendo 2020-09-13 11:44:02 UTC
Created attachment 165454 [details]
Calc zoom slider in print preview toolbar

On Ubuntu it's different now but doesn't seem to be fixed.
The background of the slider is white instead of transparent.

Version: 7.1.0.0.alpha0+
Build ID: 83aa172697c11a9550c27a28f8e62b523ec7086d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-09-10_21:26:34
Calc: threaded
Comment 12 BogdanB 2020-09-14 13:09:47 UTC
Confirm, it's white on Ubuntu. It's not the same color as the background.

Version: 7.1.0.0.alpha0+
Build ID: 3a22f5a589e822e7ca8bbb00e38a3aff93ed7ba5
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 13 Thomas Lendo 2020-09-15 06:39:35 UTC
But on Windows it's fixed.

Version: 7.1.0.0.alpha0+ (x64)
Build ID: abcc4eb907661e07ad850ccce7eb06f129da4286
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: de-DE

@Xisco: Is the white background on Linux (gtk3) a new bug?
Comment 14 Xisco Faulí 2020-09-15 08:06:26 UTC
I do confirm the issue is fixed in gen

Version: 7.1.0.0.alpha0+
Build ID: 6f1e02c96b887750f974c187a82ecd6236e6a435
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

but 
https://git.libreoffice.org/core/commit/00cffc20e40b2412c7e9867eed24c9834504e24f introduced the while background in gtk3 as mentioned in comment 12.
I'll report it in a follow-up bug

@Noel, thanks for fixing this issue!!
Comment 15 Commit Notification 2020-09-15 10:51:52 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/22886babfdb9fad2e50d40e04250d54366a9a708

tdf#135181 Calc print preview zoom slider print preview not transparent (gen)

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 BogdanB 2020-09-23 15:02:22 UTC
Created attachment 165797 [details]
screenshot

It's still white in Linux. See screenshot.

Version: 7.1.0.0.alpha0+
Build ID: 121771e37f7e2de41cd5643475861062bf25627b
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded