tdf#135181 Calc print preview zoom slider print preview not transparent (gen)

Change-Id: I7244f429194145df99a4b52fce144c6ec45f3b61
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102168
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>