sc/source/ui/cctrl/tbzoomsliderctrl.cxx
@@ -397,9 +397,11 @@ void ScZoomSlider::DoPaint(vcl::RenderContext& rRenderContext)
     Size aSliderWindowSize(GetOutputSizePixel());
     tools::Rectangle aRect(Point(0, 0), aSliderWindowSize);
 
-    ScopedVclPtrInstance< VirtualDevice > pVDev(rRenderContext);
-    pVDev->SetBackground(Wallpaper(COL_TRANSPARENT));
+    ScopedVclPtrInstance< VirtualDevice > pVDev(rRenderContext, DeviceFormat::DEFAULT, DeviceFormat::BITMASK);
     pVDev->SetOutputSizePixel(aSliderWindowSize);
+    pVDev->SetFillColor( COL_TRANSPARENT );
+    pVDev->SetLineColor( COL_TRANSPARENT );
+    pVDev->DrawRect( aRect );
 
     tools::Rectangle aSlider = aRect;
 
